@@ -24,6 +24,7 @@ SOURCES += src/main.cpp \
     src/core/LocalListingNetworkReply.cpp \
     src/core/NetworkAccessManager.cpp \
     src/core/NetworkCache.cpp \
+    src/core/NetworkProxyFactory.cpp \
     src/core/SearchesManager.cpp \
     src/core/SearchSuggester.cpp \
     src/core/SessionsManager.cpp \
@@ -71,8 +72,7 @@ SOURCES += src/main.cpp \
     src/modules/windows/transfers/TransfersContentsWidget.cpp \
     src/modules/windows/web/ImagePropertiesDialog.cpp \
     src/modules/windows/web/ProgressBarWidget.cpp \
-    src/modules/windows/web/WebContentsWidget.cpp \
-    src/core/NetworkProxyFactory.cpp
+    src/modules/windows/web/WebContentsWidget.cpp
 
 HEADERS += src/core/ActionsManager.h \
     src/core/AddressCompletionModel.h \
@@ -84,6 +84,7 @@ HEADERS += src/core/ActionsManager.h \
     src/core/LocalListingNetworkReply.h \
     src/core/NetworkAccessManager.h \
     src/core/NetworkCache.h \
+    src/core/NetworkProxyFactory.h \
     src/core/SearchesManager.h \
     src/core/SearchSuggester.h \
     src/core/SessionsManager.h \
@@ -131,8 +132,7 @@ HEADERS += src/core/ActionsManager.h \
     src/modules/windows/transfers/TransfersContentsWidget.h \
     src/modules/windows/web/ImagePropertiesDialog.h \
     src/modules/windows/web/ProgressBarWidget.h \
-    src/modules/windows/web/WebContentsWidget.h \
-    src/core/NetworkProxyFactory.h
+    src/modules/windows/web/WebContentsWidget.h
 
 FORMS += src/ui/AuthenticationDialog.ui \
     src/ui/BookmarkPropertiesDialog.ui \
