@@ -195,82 +195,14 @@ value=true
 type=bool
 value=true
 
-[Network/WorkOffline]
-type=bool
-value=false
-
-[Proxy/ProxyMode]
+[Network/ProxyMode]
 type=enumeration
 value=system
 choices=noproxy,manual,system,automatic
 
-[Proxy/AutomaticConfigurationPath]
-type=path
-value=
-
-[Proxy/AutomaticTestAddress]
-type=string
-value=http://otter-browser.org
-
-[Proxy/UseCommon]
+[Network/WorkOffline]
 type=bool
 value=false
-
-[Proxy/CommonAddress]
-type=string
-value=
-
-[Proxy/CommonPort]
-type=integer
-value=
-
-[Proxy/UseHttp]
-type=bool
-value=false
-
-[Proxy/HttpAddress]
-type=string
-value=
-
-[Proxy/HttpPort]
-type=integer
-value=
-
-[Proxy/UseHttps]
-type=bool
-value=false
-
-[Proxy/HttpsAddress]
-type=string
-value=
-
-[Proxy/HttpsPort]
-type=integer
-value=
-
-[Proxy/UseFtp]
-type=bool
-value=false
-
-[Proxy/FtpAddress]
-type=string
-value=
-
-[Proxy/FtpPort]
-type=integer
-value=
-
-[Proxy/UseSocks]
-type=bool
-value=false
-
-[Proxy/SocksAddress]
-type=string
-value=
-
-[Proxy/SocksPort]
-type=integer
-value=
 
 [Paths/Downloads]
 type=path
@@ -279,6 +211,70 @@ value=
 [Paths/SaveFile]
 type=path
 value=
+
+[Proxy/AutomaticConfigurationPath]
+type=path
+value=
+
+[Proxy/CommonPort]
+type=integer
+value=
+
+[Proxy/CommonServers]
+type=string
+value=
+
+[Proxy/FtpPort]
+type=integer
+value=
+
+[Proxy/FtpServers]
+type=string
+value=
+
+[Proxy/HttpPort]
+type=integer
+value=
+
+[Proxy/HttpServers]
+type=string
+value=
+
+[Proxy/HttpsPort]
+type=integer
+value=
+
+[Proxy/HttpsServers]
+type=string
+value=
+
+[Proxy/SocksPort]
+type=integer
+value=
+
+[Proxy/SocksServers]
+type=string
+value=
+
+[Proxy/UseCommon]
+type=bool
+value=false
+
+[Proxy/UseFtp]
+type=bool
+value=false
+
+[Proxy/UseHttp]
+type=bool
+value=false
+
+[Proxy/UseHttps]
+type=bool
+value=false
+
+[Proxy/UseSocks]
+type=bool
+value=false
 
 [TabBar/CloseOnDoubleClick]
 type=bool
