@@ -20,7 +20,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>4</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="generalTab">
       <attribute name="title">
@@ -1300,7 +1300,7 @@
        <item>
         <widget class="QStackedWidget" name="advancedStackedWidget">
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="addressFieldPage">
           <layout class="QVBoxLayout" name="addressFieldLayout" stretch="0,0,1">
